# proj_repo-core

./: CMakeLists.txt  README.md
cmake/: FindCore.cmake
inc_pub/: core_api.h
src/: main.c
